--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 							<li><a class="mdl-navigation__link" data-scroll href="#portfolio_sec">portfolio</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#experience_sec">experience</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#education_sec">education</a></li>
-							<li><span id="blog_drp" class="mdl-navigation__link">achievements</span>
+							<li><a class="mdl-navigation__link" data-scroll href="#blog_sec">achievements</a></li>
+							<!-- <li><span id="blog_drp" class="mdl-navigation__link">achievements</span>
 								<ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
 									data-mdl-for="blog_drp">
 									<li class="mdl-menu__item"><a href="blog-list.html">Blog List</a></li>
@@ -54,7 +55,7 @@
 									<li class="mdl-menu__item"><a href="vimeo-blog-post.html">Vimeo Blog Post</a></li>
 									<li class="mdl-menu__item"><a href="audio-blog-post.html">Audio Blog Post</a></li>
 								</ul>
-							</li>
+							</li> -->
 							<li><a class="mdl-navigation__link" data-scroll href="#references_sec">references</a></li>
 							<li><a class="mdl-navigation__link" data-scroll href="#contact_sec">contact</a></li>
 						</ul>
@@ -759,7 +760,9 @@
 						<section id="blog_sec" class="blog-sec sec-pad-top-sm">
 							<h2 class="mb-30">achievements</h2>
 							<div class="row">
-								<div class="col-sm-4 mb-30">
+
+								<!-- Youtube blog post -->
+								<!-- <div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__title pa-0">
 											<div class="blog-img blog-1"></div>
@@ -791,18 +794,93 @@
 											</ul>
 										</div>
 									</div>
+								</div> -->
+								<!-- /Youtube blog post -->
+
+								<!-- Image blog post -->
+								<div class="col-sm-4 mb-30">
+									<div class="mdl-card mdl-shadow--2dp pa-0">
+										<div class="mdl-card__title pa-0">
+											<div class="blog-img blog-1"></div>
+										</div>
+										<div class="mdl-card__supporting-text relative">
+											<span class="blog-cat">Award</span>
+											<a href="image-blog-post.html">
+												<h4 class="mt-15 mb-20">Gold Medalist in Bachelors</h4>
+											</a>
+											<p>Was awarded the Gold medal during graduation in Information Technology from Heritage Institute of Technology, Kolkata.</p>
+											<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+												<i class="zmdi zmdi-image-o"></i>
+											</a>
+										</div>
+										<div class="mdl-card__actions mdl-card--border">
+											<span class="blog-post-date inline-block">25.1.20</span>
+											<div class="mdl-layout-spacer"></div>
+											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
+												<i class="zmdi zmdi-favorite"></i>
+											</button>	
+											<!-- <button id ="share_menu_2" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+												<i class="zmdi zmdi-share"></i>
+											</button>
+											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
+												data-mdl-for="share_menu_2">
+											  <li class="mdl-menu__item">Facebook</li>
+											  <li class="mdl-menu__item">Twitter</li>
+											  <li class="mdl-menu__item">LinkedIn</li>
+											</ul> -->
+										</div>
+									</div>
 								</div>
+								<!-- /Image blog post -->
+
+								<!-- Image blog post -->
 								<div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__title pa-0">
 											<div class="blog-img blog-2"></div>
 										</div>
 										<div class="mdl-card__supporting-text relative">
-											<span class="blog-cat">photography</span>
+											<span class="blog-cat">Award</span>
 											<a href="image-blog-post.html">
-												<h4 class="mt-15 mb-20">Iceland live in images</h4>
+												<h4 class="mt-15 mb-20">Fourth position in Smart India Hackathon, 2018</h4>
 											</a>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
+											<p>Ranked fourth and received the Persistent Inspiration Award in the “Smart India Hackathon 2018”, organized by MHRD India, AICTE at Nagpur.</p>
+											<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+												<i class="zmdi zmdi-image-o"></i>
+											</a>
+										</div>
+										<div class="mdl-card__actions mdl-card--border">
+											<span class="blog-post-date inline-block">31.3.18</span>
+											<div class="mdl-layout-spacer"></div>
+											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
+												<i class="zmdi zmdi-favorite"></i>
+											</button>	
+											<!-- <button id ="share_menu_2" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+												<i class="zmdi zmdi-share"></i>
+											</button>
+											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
+												data-mdl-for="share_menu_2">
+											  <li class="mdl-menu__item">Facebook</li>
+											  <li class="mdl-menu__item">Twitter</li>
+											  <li class="mdl-menu__item">LinkedIn</li>
+											</ul> -->
+										</div>
+									</div>
+								</div>
+								<!-- /Image blog post -->
+
+								<!-- Image blog post -->
+								<div class="col-sm-4 mb-30">
+									<div class="mdl-card mdl-shadow--2dp pa-0">
+										<div class="mdl-card__title pa-0">
+											<div class="blog-img blog-3"></div>
+										</div>
+										<div class="mdl-card__supporting-text relative">
+											<span class="blog-cat">Qualification</span>
+											<a href="image-blog-post.html">
+												<h4 class="mt-15 mb-20">Reached top 200 nationwide in TCS EngiNX, 2018</h4>
+											</a>
+											<p>Selected amongst the top 200 teams who qualified for the second round in EngiNX, 2018 organized by TCS.</p>
 											<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
 												<i class="zmdi zmdi-image-o"></i>
 											</a>
@@ -813,7 +891,7 @@
 											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
 												<i class="zmdi zmdi-favorite"></i>
 											</button>	
-											<button id ="share_menu_2" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+											<!-- <button id ="share_menu_2" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
 												<i class="zmdi zmdi-share"></i>
 											</button>
 											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
@@ -821,11 +899,14 @@
 											  <li class="mdl-menu__item">Facebook</li>
 											  <li class="mdl-menu__item">Twitter</li>
 											  <li class="mdl-menu__item">LinkedIn</li>
-											</ul>
+											</ul> -->
 										</div>
 									</div>
 								</div>
-								<div class="col-sm-4 mb-30">
+								<!-- /Image blog post -->
+
+								<!-- Gallery blog post -->
+								<!-- <div class="col-sm-4 mb-30">
 									<div class="mdl-card mdl-shadow--2dp pa-0">
 										<div class="mdl-card__title pa-0">
 											<div class="blog-img blog-3"></div>
@@ -857,7 +938,8 @@
 											</ul>
 										</div>
 									</div>
-								</div>
+								</div> -->
+								<!-- /Gallery blog post -->
 							</div>
 							<div class="text-center mt-20 mb-30">
 								<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  margin-lr-auto view-more" href="blog-list.html">view all</a>
