--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 							<span class="candidate-name block mb-10 text-center">Aishik Deb</span>
 							<ul class="social-icons  mb-30">
 								<li>
-									<a class="facebook-link" href="#">
-										<i id="tt11" class="zmdi zmdi-facebook"></i>
+									<a class="github-link" target="_blank" href="https://github.com/AishikD14">
+										<i id="tt11" class="zmdi zmdi-github-alt"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt11">
-											facebook
+											github
 										</div>
 									</a>
 								</li>
@@ -99,29 +99,29 @@
 									</a>
 								</li>
 								<li>
-									<a class="linkedin-link" href="#">
+									<a class="linkedin-link" target="_blank" href="https://www.linkedin.com/in/adeb97">
 										<i id="tt13" class="zmdi zmdi-linkedin"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt13">
 											linkedin
 										</div>
 									</a>
 								</li>
-								<li>
+								<!-- <li>
 									<a class="dribbble-link" href="#">
 										<i id="tt14" class="zmdi zmdi-dribbble"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt14">
 											dribbble
 										</div>
 									</a>
-								</li>
-								<li>
+								</li> -->
+								<!-- <li>
 									<a class="instagram-link" href="#">
 										<i id="tt15" class="zmdi zmdi-instagram"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt15">
 											instagram
 										</div>
 									</a>
-								</li>
+								</li> -->
 							</ul>
 						</div>
 						<div class="mdl-scroll-spy-2">
@@ -155,9 +155,15 @@
 										<i class="zmdi zmdi-library pr-15"></i>
 										<span class="font-capitalize">education</span>
 									</a>
+								</li>
+								<li>
+									<a class="mdl-navigation__link border-top-sep" data-scroll href="#blog_sec">
+										<i class="zmdi zmdi-library pr-15"></i>
+										<span class="font-capitalize">achievements</span>
+									</a>
 								</li>	
 								
-								<li>
+								<!-- <li>
 									<a class="mdl-navigation__link border-top-sep" href="javascript:void(0);" data-toggle="collapse" data-target="#blog_dr">
 										<i class="zmdi zmdi-tag-more pr-15"></i>
 										<span class="font-capitalize">achievements</span>
@@ -170,7 +176,7 @@
 										<li><a class="mdl-navigation__link border-top-sep" href="vimeo-blog-post.html">Vimeo Blog Post</a></li>
 										<li><a class="mdl-navigation__link border-top-sep" href="audio-blog-post.html">Audio Blog Post</a></li>
 									</ul>
-								</li>
+								</li> -->
 								
 								<li>
 									<a class="mdl-navigation__link border-top-sep" data-scroll href="#references_sec">
@@ -208,7 +214,7 @@
 												<div class="candidate-img mb-35"></div>
 												<ul class="social-icons">
 													<li>
-														<a class="facebook-link" target="_blank" href="https://github.com/AishikD14">
+														<a class="github-link" target="_blank" href="https://github.com/AishikD14">
 															<i id="tt1" class="zmdi zmdi-github-alt"></i>
 															<div class="mdl-tooltip" data-mdl-for="tt1">
 																github
