blog list finished

--- a/blog-list.html
+++ b/blog-list.html
@@ -213,30 +213,30 @@
 											<div class="blog-img blog-1"></div>
 										</div>
 										<div class="mdl-card__supporting-text relative">
-											<span class="blog-cat">photography</span>
+											<span class="blog-cat">Award</span>
 											<a href="image-blog-post.html">
-												<h4 class="mt-15 mb-20">This is Image Blog Post</h4>
-											</a>	
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
+												<h4 class="mt-15 mb-20">Gold Medalist in Bachelors</h4>
+											</a>
+											<p>Was awarded the Gold medal during graduation in Information Technology from Heritage Institute of Technology, Kolkata.</p>
 											<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
-												<i class="zmdi zmdi zmdi-image-o"></i>
+												<i class="zmdi zmdi-image-o"></i>
 											</a>
 										</div>
 										<div class="mdl-card__actions mdl-card--border">
-											<span class="blog-post-date inline-block">21.1.17</span>
+											<span class="blog-post-date inline-block">25.1.20</span>
 											<div class="mdl-layout-spacer"></div>
 											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
 												<i class="zmdi zmdi-favorite"></i>
 											</button>	
-											<button id ="share_menu_1" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+											<!-- <button id ="share_menu_2" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
 												<i class="zmdi zmdi-share"></i>
 											</button>
 											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
-												data-mdl-for="share_menu_1">
+												data-mdl-for="share_menu_2">
 											  <li class="mdl-menu__item">Facebook</li>
 											  <li class="mdl-menu__item">Twitter</li>
 											  <li class="mdl-menu__item">LinkedIn</li>
-											</ul>
+											</ul> -->
 										</div>
 									</div>
 								</div>
@@ -246,22 +246,22 @@
 											<div class="blog-img blog-2"></div>
 										</div>
 										<div class="mdl-card__supporting-text relative">
-											<span class="blog-cat">Illustration</span>
-											<a href="gallery-blog-post.html">
-												<h4 class="mt-15 mb-20">This is Gallery Blog Post</h4>
+											<span class="blog-cat">Award</span>
+											<a href="image-blog-post.html">
+												<h4 class="mt-15 mb-20">Fourth position in Smart India Hackathon, 2018</h4>
 											</a>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
-											<a href="gallery-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-green mdl-shadow--8dp">
-												<i class="zmdi zmdi-collection-image-o"></i>
+											<p>Ranked fourth and received the Persistent Inspiration Award in the “Smart India Hackathon 2018”, organized by MHRD India, AICTE at Nagpur.</p>
+											<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+												<i class="zmdi zmdi-image-o"></i>
 											</a>
 										</div>
 										<div class="mdl-card__actions mdl-card--border">
-											<span class="blog-post-date inline-block">18.1.17</span>
+											<span class="blog-post-date inline-block">31.3.18</span>
 											<div class="mdl-layout-spacer"></div>
 											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
 												<i class="zmdi zmdi-favorite"></i>
 											</button>	
-											<button id ="share_menu_2" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+											<!-- <button id ="share_menu_2" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
 												<i class="zmdi zmdi-share"></i>
 											</button>
 											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
@@ -269,7 +269,7 @@
 											  <li class="mdl-menu__item">Facebook</li>
 											  <li class="mdl-menu__item">Twitter</li>
 											  <li class="mdl-menu__item">LinkedIn</li>
-											</ul>
+											</ul> -->
 										</div>
 									</div>
 								</div>
@@ -281,13 +281,13 @@
 											<div class="blog-img blog-3"></div>
 										</div>
 										<div class="mdl-card__supporting-text relative">
-											<span class="blog-cat">Video</span>
-											<a href="youtube-blog-post.html">
-												<h4 class="mt-15 mb-20">This is Youtube Blog Post</h4>
-											</a>	
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
-											<a href="youtube-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-red mdl-shadow--8dp">
-												<i class="zmdi zmdi-youtube-play"></i>
+											<span class="blog-cat">Qualification</span>
+											<a href="image-blog-post.html">
+												<h4 class="mt-15 mb-20">Reached top 200 nationwide in TCS EngiNX, 2018</h4>
+											</a>
+											<p>Selected amongst the top 200 teams who qualified for the second round in EngiNX, 2018 organized by TCS.</p>
+											<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+												<i class="zmdi zmdi-image-o"></i>
 											</a>
 										</div>
 										<div class="mdl-card__actions mdl-card--border">
@@ -296,117 +296,15 @@
 											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
 												<i class="zmdi zmdi-favorite"></i>
 											</button>	
-											<button id ="share_menu_3" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+											<!-- <button id ="share_menu_2" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
 												<i class="zmdi zmdi-share"></i>
 											</button>
 											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
-												data-mdl-for="share_menu_3">
+												data-mdl-for="share_menu_2">
 											  <li class="mdl-menu__item">Facebook</li>
 											  <li class="mdl-menu__item">Twitter</li>
 											  <li class="mdl-menu__item">LinkedIn</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-								<div class="col-sm-6 mb-30">
-									<div class="mdl-card mdl-shadow--2dp pa-0">
-										<div class="mdl-card__title pa-0">
-											<div class="blog-img blog-4"></div>
-										</div>
-										<div class="mdl-card__supporting-text relative">
-											<span class="blog-cat">Videography</span>
-											<a href="vimeo-blog-post.html">
-												<h4 class="mt-15 mb-20">This is Vimeo Video Blog Post</h4>
-											</a>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
-											<a href="vimeo-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-violet mdl-shadow--8dp">
-												<i class="zmdi zmdi-youtube-play"></i>
-											</a>
-										</div>
-										<div class="mdl-card__actions mdl-card--border">
-											<span class="blog-post-date inline-block">14.1.17</span>
-											<div class="mdl-layout-spacer"></div>
-											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
-												<i class="zmdi zmdi-favorite"></i>
-											</button>	
-											<button id ="share_menu_4" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-												<i class="zmdi zmdi-share"></i>
-											</button>
-											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
-												data-mdl-for="share_menu_4">
-											  <li class="mdl-menu__item">Facebook</li>
-											  <li class="mdl-menu__item">Twitter</li>
-											  <li class="mdl-menu__item">LinkedIn</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							
-							<div class="row">
-								<div class="col-sm-6 mb-30">
-									<div class="mdl-card mdl-shadow--2dp pa-0">
-										<div class="mdl-card__title pa-0">
-											<div class="blog-img blog-5"></div>
-										</div>
-										<div class="mdl-card__supporting-text relative">
-											<span class="blog-cat">Music</span>
-											<a href="audio-blog-post.html">
-												<h4 class="mt-15 mb-20">This is a Audio Blog Post</h4>
-											</a>	
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
-											<a href="audio-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-red mdl-shadow--8dp">
-												<i class="zmdi zmdi-audio"></i>
-											</a>
-										</div>
-										<div class="mdl-card__actions mdl-card--border">
-											<span class="blog-post-date inline-block">12.1.17</span>
-											<div class="mdl-layout-spacer"></div>
-											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
-												<i class="zmdi zmdi-favorite"></i>
-											</button>	
-											<button id ="share_menu_5" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-												<i class="zmdi zmdi-share"></i>
-											</button>
-											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
-												data-mdl-for="share_menu_5">
-											  <li class="mdl-menu__item">Facebook</li>
-											  <li class="mdl-menu__item">Twitter</li>
-											  <li class="mdl-menu__item">LinkedIn</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-								<div class="col-sm-6 mb-30">
-									<div class="mdl-card mdl-shadow--2dp pa-0">
-										<div class="mdl-card__title pa-0">
-											<div class="blog-img blog-6"></div>
-										</div>
-										<div class="mdl-card__supporting-text relative">
-											<span class="blog-cat">photography</span>
-											<a href="image-blog-post.html">
-												<h4 class="mt-15 mb-20">This is Image Blog Post</h4>
-											</a>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
-											<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
-												<i class="zmdi zmdi-image-o"></i>
-											</a>
-										</div>
-										<div class="mdl-card__actions mdl-card--border">
-											<span class="blog-post-date inline-block">10.1.17</span>
-											<div class="mdl-layout-spacer"></div>
-											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
-												<i class="zmdi zmdi-favorite"></i>
-											</button>	
-											<button id ="share_menu_6" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-												<i class="zmdi zmdi-share"></i>
-											</button>
-											<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
-												data-mdl-for="share_menu_6">
-											  <li class="mdl-menu__item">Facebook</li>
-											  <li class="mdl-menu__item">Twitter</li>
-											  <li class="mdl-menu__item">LinkedIn</li>
-											</ul>
+											</ul> -->
 										</div>
 									</div>
 								</div>
@@ -495,3 +393,178 @@
 		<script src="js/init.js"></script>
 	</body>
 </html>
+<!-- Blog Templates -->
+
+	<!-- Image blog post -->
+	<!-- <div class="mdl-card mdl-shadow--2dp pa-0">
+		<div class="mdl-card__title pa-0">
+			<div class="blog-img blog-1"></div>
+		</div>
+		<div class="mdl-card__supporting-text relative">
+			<span class="blog-cat">photography</span>
+			<a href="image-blog-post.html">
+				<h4 class="mt-15 mb-20">This is Image Blog Post</h4>
+			</a>	
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
+			<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+				<i class="zmdi zmdi zmdi-image-o"></i>
+			</a>
+		</div>
+		<div class="mdl-card__actions mdl-card--border">
+			<span class="blog-post-date inline-block">21.1.17</span>
+			<div class="mdl-layout-spacer"></div>
+			<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
+				<i class="zmdi zmdi-favorite"></i>
+			</button>	
+			<button id ="share_menu_1" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+				<i class="zmdi zmdi-share"></i>
+			</button>
+			<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
+				data-mdl-for="share_menu_1">
+			<li class="mdl-menu__item">Facebook</li>
+			<li class="mdl-menu__item">Twitter</li>
+			<li class="mdl-menu__item">LinkedIn</li>
+			</ul>
+		</div>
+	</div> -->
+	<!-- /Image blog post -->
+
+	<!-- Gallery blog post -->
+	<!-- <div class="mdl-card mdl-shadow--2dp pa-0">
+		<div class="mdl-card__title pa-0">
+			<div class="blog-img blog-2"></div>
+		</div>
+		<div class="mdl-card__supporting-text relative">
+			<span class="blog-cat">Illustration</span>
+			<a href="gallery-blog-post.html">
+				<h4 class="mt-15 mb-20">This is Gallery Blog Post</h4>
+			</a>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
+			<a href="gallery-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-green mdl-shadow--8dp">
+				<i class="zmdi zmdi-collection-image-o"></i>
+			</a>
+		</div>
+		<div class="mdl-card__actions mdl-card--border">
+			<span class="blog-post-date inline-block">18.1.17</span>
+			<div class="mdl-layout-spacer"></div>
+			<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
+				<i class="zmdi zmdi-favorite"></i>
+			</button>	
+			<button id ="share_menu_2" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+				<i class="zmdi zmdi-share"></i>
+			</button>
+			<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
+				data-mdl-for="share_menu_2">
+			  <li class="mdl-menu__item">Facebook</li>
+			  <li class="mdl-menu__item">Twitter</li>
+			  <li class="mdl-menu__item">LinkedIn</li>
+			</ul>
+		</div>
+	</div> -->
+	<!-- /Gallery blog post -->
+
+	<!-- Youtube blog post -->
+	<!-- <div class="mdl-card mdl-shadow--2dp pa-0">
+		<div class="mdl-card__title pa-0">
+			<div class="blog-img blog-3"></div>
+		</div>
+		<div class="mdl-card__supporting-text relative">
+			<span class="blog-cat">Video</span>
+			<a href="youtube-blog-post.html">
+				<h4 class="mt-15 mb-20">This is Youtube Blog Post</h4>
+			</a>	
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
+			<a href="youtube-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-red mdl-shadow--8dp">
+				<i class="zmdi zmdi-youtube-play"></i>
+			</a>
+		</div>
+		<div class="mdl-card__actions mdl-card--border">
+			<span class="blog-post-date inline-block">15.1.17</span>
+			<div class="mdl-layout-spacer"></div>
+			<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
+				<i class="zmdi zmdi-favorite"></i>
+			</button>	
+			<button id ="share_menu_3" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+				<i class="zmdi zmdi-share"></i>
+			</button>
+			<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
+				data-mdl-for="share_menu_3">
+			  <li class="mdl-menu__item">Facebook</li>
+			  <li class="mdl-menu__item">Twitter</li>
+			  <li class="mdl-menu__item">LinkedIn</li>
+			</ul>
+		</div>
+	</div> -->
+	<!-- /Youtube blog post -->
+
+	<!-- Vimeo Video blog post -->
+	<!-- <div class="mdl-card mdl-shadow--2dp pa-0">
+		<div class="mdl-card__title pa-0">
+			<div class="blog-img blog-4"></div>
+		</div>
+		<div class="mdl-card__supporting-text relative">
+			<span class="blog-cat">Videography</span>
+			<a href="vimeo-blog-post.html">
+				<h4 class="mt-15 mb-20">This is Vimeo Video Blog Post</h4>
+			</a>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
+			<a href="vimeo-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-violet mdl-shadow--8dp">
+				<i class="zmdi zmdi-youtube-play"></i>
+			</a>
+		</div>
+		<div class="mdl-card__actions mdl-card--border">
+			<span class="blog-post-date inline-block">14.1.17</span>
+			<div class="mdl-layout-spacer"></div>
+			<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
+				<i class="zmdi zmdi-favorite"></i>
+			</button>	
+			<button id ="share_menu_4" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+				<i class="zmdi zmdi-share"></i>
+			</button>
+			<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
+				data-mdl-for="share_menu_4">
+			  <li class="mdl-menu__item">Facebook</li>
+			  <li class="mdl-menu__item">Twitter</li>
+			  <li class="mdl-menu__item">LinkedIn</li>
+			</ul>
+		</div>
+	</div> -->
+	<!-- /Vimeo Video blog post -->
+
+	<!-- Audio blog post -->
+	<!-- <div class="col-sm-6 mb-30">
+		<div class="mdl-card mdl-shadow--2dp pa-0">
+			<div class="mdl-card__title pa-0">
+				<div class="blog-img blog-5"></div>
+			</div>
+			<div class="mdl-card__supporting-text relative">
+				<span class="blog-cat">Music</span>
+				<a href="audio-blog-post.html">
+					<h4 class="mt-15 mb-20">This is a Audio Blog Post</h4>
+				</a>	
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eleifend lacinia...</p>
+				<a href="audio-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-red mdl-shadow--8dp">
+					<i class="zmdi zmdi-audio"></i>
+				</a>
+			</div>
+			<div class="mdl-card__actions mdl-card--border">
+				<span class="blog-post-date inline-block">12.1.17</span>
+				<div class="mdl-layout-spacer"></div>
+				<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
+					<i class="zmdi zmdi-favorite"></i>
+				</button>	
+				<button id ="share_menu_5" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+					<i class="zmdi zmdi-share"></i>
+				</button>
+				<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
+					data-mdl-for="share_menu_5">
+				  <li class="mdl-menu__item">Facebook</li>
+				  <li class="mdl-menu__item">Twitter</li>
+				  <li class="mdl-menu__item">LinkedIn</li>
+				</ul>
+			</div>
+		</div>
+	</div> -->
+	<!-- /Audio blog post -->
+
+<!-- /Blog Templates -->
