--- a/blog-list.html
+++ b/blog-list.html
@@ -214,11 +214,11 @@
 										</div>
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Award</span>
-											<a href="image-blog-post.html">
+											<a href="javascript:void(0);">
 												<h4 class="mt-15 mb-20">Gold Medalist in Bachelors</h4>
 											</a>
 											<p>Was awarded the Gold medal during graduation in Information Technology from Heritage Institute of Technology, Kolkata.</p>
-											<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+											<a href="javascript:void(0);" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
 												<i class="zmdi zmdi-image-o"></i>
 											</a>
 										</div>
@@ -247,11 +247,11 @@
 										</div>
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Award</span>
-											<a href="image-blog-post.html">
+											<a href="javascript:void(0);">
 												<h4 class="mt-15 mb-20">Fourth position in Smart India Hackathon, 2018</h4>
 											</a>
 											<p>Ranked fourth and received the Persistent Inspiration Award in the “Smart India Hackathon 2018”, organized by MHRD India, AICTE at Nagpur.</p>
-											<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+											<a href="javascript:void(0);" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
 												<i class="zmdi zmdi-image-o"></i>
 											</a>
 										</div>
@@ -282,11 +282,11 @@
 										</div>
 										<div class="mdl-card__supporting-text relative">
 											<span class="blog-cat">Qualification</span>
-											<a href="image-blog-post.html">
+											<a href="javascript:void(0);">
 												<h4 class="mt-15 mb-20">Reached top 200 nationwide in TCS EngiNX, 2018</h4>
 											</a>
 											<p>Selected amongst the top 200 teams who qualified for the second round in EngiNX, 2018 organized by TCS.</p>
-											<a href="image-blog-post.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
+											<a href="javascript:void(0);" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect bg-blue mdl-shadow--8dp">
 												<i class="zmdi zmdi-image-o"></i>
 											</a>
 										</div>
