--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
 									<!-- Portfolio Filters --> 
 									<ul id="filters">
 										<li><a id="all" href="#" data-filter="*" class="active">all</a></li>	
-										<li><a href="#" data-filter=".branding">branding</a></li>
-										<li><a href="#" data-filter=".design">design</a></li>
+										<li><a href="#" data-filter=".hackathon">hackathon</a></li>
+										<li><a href="#" data-filter=".projects">projects</a></li>
 										<li><a href="#" data-filter=".photography">photo</a></li>
 										<li><a href="#" data-filter=".web">web</a></li>
 									</ul>
@@ -461,48 +461,56 @@
 							<div class="gallery-wrap mb-30">
 								<div class="portfolio-wrap project-gallery">
 									<ul id="portfolio" class="portf auto-construct  project-gallery" data-col="3">
-										<li  class="item mdl-card mdl-shadow--2dp pa-0 branding">
+										<li  class="item mdl-card mdl-shadow--2dp pa-0 hackathon projects">
 											<div class="light-img-wrap mdl-card__title pa-0">
-												<img class="img-responsive" src="img/gallery1.jpg"  alt="Image description" />
+												<img class="img-responsive" src="img/CrowdSafe.jpeg"  alt="Image description" />
 												<div class="light-img-overlay"></div>
-												<span class="img-cap">good morning</span>
+												<!-- <span class="img-cap">CrowdSafe</span> -->
 											</div>	
 											<span class="bottom-links mdl-card__actions">
-												<a id="goto_box_1" href="#"><i class="zmdi zmdi-eye"></i></a>
-												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a>
+												<h4>CROWDSAFE</h4>
+												<p class="img-cap">Covid Awareness System made for CODE19, an online hackathon organized by HackerEarth</p>
+												<!-- <a id="goto_box_1" href="#"><i class="zmdi zmdi-eye"></i></a> -->
+												<!-- <a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
 										</li>
-										<li class="item mdl-card mdl-shadow--2dp pa-0  photography">
+										<li class="item mdl-card mdl-shadow--2dp pa-0  hackathon">
 											<div class="light-img-wrap mdl-card__title pa-0">
-												<img class="img-responsive" src="img/gallery2.jpg"  alt="Image description" />
+												<img class="img-responsive" src="img/smart-india-group-pic.jpeg"  alt="Image description" />
 												<div class="light-img-overlay"></div>
-												<span class="img-cap">Grand Canyon</span>
+												<!-- <span class="img-cap">Smart India Hackathon</span> -->
 											</div>
 											<span class="bottom-links mdl-card__actions">
-												<a id="goto_box_2" href="#"><i class="zmdi zmdi-eye"></i></a>
-												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a>
+												<h4>SMART INDIA HACKATHON</h4>
+												<p class="img-cap">At the Grand Finale Event held at Nagpur, India</p>
+												<!-- <a id="goto_box_2" href="#"><i class="zmdi zmdi-eye"></i></a> -->
+												<!-- <a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
 										</li>
-										<li class="item mdl-card mdl-shadow--2dp pa-0 design">
+										<li class="item mdl-card mdl-shadow--2dp pa-0 photography">
 											<div class="light-img-wrap mdl-card__title pa-0">
-												<img class="img-responsive" src="img/gallery3.jpg"  alt="Image description" />
+												<img class="img-responsive" src="img/graduation.jpeg"  alt="Image description" />
 												<div class="light-img-overlay"></div>
-												<span class="img-cap">iceland</span>
+												<!-- <span class="img-cap">iceland</span> -->
 											</div>
 											<span class="bottom-links mdl-card__actions">
-												<a id="goto_box_3" href="#"><i class="zmdi zmdi-eye"></i></a>
-												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a>
+												<h4>GOLD MEDALIST IT</h4>
+												<p class="img-cap">At the Graduation Ceremony for Bachelors at Heritage Institute of Technology</p>
+												<!-- <a id="goto_box_3" href="#"><i class="zmdi zmdi-eye"></i></a>
+												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
 										</li>
 										<li class="item mdl-card mdl-shadow--2dp pa-0 web">
 											<div class="light-img-wrap mdl-card__title pa-0">
 												<img class="img-responsive" src="img/gallery4.jpg"  alt="Image description" />
 												<div class="light-img-overlay"></div>
-												<span class="img-cap">serenity</span>
+												<!-- <span class="img-cap">serenity</span> -->
 											</div>
 											<span class="bottom-links mdl-card__actions">
-												<a id="goto_box_4" href="#"><i class="zmdi zmdi-eye"></i></a>
-												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a>
+												<h4>SMART INDIA HACKATHON</h4>
+												<p class="img-cap">At the Grand Finale Event held at Nagpur, India</p>
+												<!-- <a id="goto_box_4" href="#"><i class="zmdi zmdi-eye"></i></a>
+												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
 										</li>
 										
@@ -510,22 +518,26 @@
 											<div class="light-img-wrap mdl-card__title pa-0">
 												<img class="img-responsive" src="img/gallery5.jpg"  alt="Image description" />
 												<div class="light-img-overlay"></div>
-												<span class="img-cap">world seize day</span>
+												<!-- <span class="img-cap">world seize day</span> -->
 											</div>
 											<span class="bottom-links mdl-card__actions">
-												<a id="goto_box_5" href="#"><i class="zmdi zmdi-eye"></i></a>
-												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a>
+												<h4>SMART INDIA HACKATHON</h4>
+												<p class="img-cap">At the Grand Finale Event held at Nagpur, India</p>
+												<!-- <a id="goto_box_5" href="#"><i class="zmdi zmdi-eye"></i></a>
+												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
 										</li>
 										<li class="item mdl-card mdl-shadow--2dp pa-0 branding">
 											<div class="light-img-wrap mdl-card__title pa-0">
 												<img class="img-responsive" src="img/gallery6.jpg"  alt="Image description" />
 												<div class="light-img-overlay"></div>
-												<span class="img-cap">green bugs</span>
+												<!-- <span class="img-cap">green bugs</span> -->
 											</div>
 											<span class="bottom-links mdl-card__actions">
-												<a id="goto_box_6" href="#"><i class="zmdi zmdi-eye"></i></a>
-												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a>
+												<h4>SMART INDIA HACKATHON</h4>
+												<p class="img-cap">At the Grand Finale Event held at Nagpur, India</p>
+												<!-- <a id="goto_box_6" href="#"><i class="zmdi zmdi-eye"></i></a>
+												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
 										</li>
 										
@@ -892,7 +904,7 @@
 											</a>
 										</div>
 										<div class="mdl-card__actions mdl-card--border">
-											<span class="blog-post-date inline-block">15.1.17</span>
+											<span class="blog-post-date inline-block">21.4.18</span>
 											<div class="mdl-layout-spacer"></div>
 											<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect mr-5">
 												<i class="zmdi zmdi-favorite"></i>
