--- a/index.html
+++ b/index.html
@@ -451,7 +451,6 @@
 										<li><a href="#" data-filter=".hackathon">hackathon</a></li>
 										<li><a href="#" data-filter=".projects">projects</a></li>
 										<li><a href="#" data-filter=".photography">photo</a></li>
-										<li><a href="#" data-filter=".web">web</a></li>
 									</ul>
 									<!--/Portfolio Filters -->
 									<div class="clearfix"></div>
@@ -461,6 +460,19 @@
 							<div class="gallery-wrap mb-30">
 								<div class="portfolio-wrap project-gallery">
 									<ul id="portfolio" class="portf auto-construct  project-gallery" data-col="3">
+										<li class="item mdl-card mdl-shadow--2dp pa-0 projects">
+											<div class="light-img-wrap mdl-card__title pa-0">
+												<img class="img-responsive" src="img/Flappy.jpeg"  alt="Image description" />
+												<div class="light-img-overlay"></div>
+												<!-- <span class="img-cap">world seize day</span> -->
+											</div>
+											<span class="bottom-links mdl-card__actions">
+												<h4>FLAPPY BIRD</h4>
+												<p class="img-cap">Single player video game made using Android</p>
+												<!-- <a id="goto_box_5" href="#"><i class="zmdi zmdi-eye"></i></a>
+												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
+											</span>
+										</li>
 										<li  class="item mdl-card mdl-shadow--2dp pa-0 hackathon projects">
 											<div class="light-img-wrap mdl-card__title pa-0">
 												<img class="img-responsive" src="img/CrowdSafe.jpeg"  alt="Image description" />
@@ -469,7 +481,7 @@
 											</div>	
 											<span class="bottom-links mdl-card__actions">
 												<h4>CROWDSAFE</h4>
-												<p class="img-cap">Covid Awareness System made for CODE19, an online hackathon organized by HackerEarth</p>
+												<p class="img-cap">Covid Awareness System</p>
 												<!-- <a id="goto_box_1" href="#"><i class="zmdi zmdi-eye"></i></a> -->
 												<!-- <a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
@@ -482,7 +494,7 @@
 											</div>
 											<span class="bottom-links mdl-card__actions">
 												<h4>SMART INDIA HACKATHON</h4>
-												<p class="img-cap">At the Grand Finale Event held at Nagpur, India</p>
+												<p class="img-cap">Grand Finale Event held at Nagpur, India</p>
 												<!-- <a id="goto_box_2" href="#"><i class="zmdi zmdi-eye"></i></a> -->
 												<!-- <a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
@@ -500,42 +512,30 @@
 												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
 										</li>
-										<li class="item mdl-card mdl-shadow--2dp pa-0 web">
+										<li class="item mdl-card mdl-shadow--2dp pa-0 projects">
 											<div class="light-img-wrap mdl-card__title pa-0">
-												<img class="img-responsive" src="img/gallery4.jpg"  alt="Image description" />
+												<img class="img-responsive" src="img/Flash-Chat.jpeg"  alt="Image description" />
 												<div class="light-img-overlay"></div>
 												<!-- <span class="img-cap">serenity</span> -->
 											</div>
 											<span class="bottom-links mdl-card__actions">
-												<h4>SMART INDIA HACKATHON</h4>
-												<p class="img-cap">At the Grand Finale Event held at Nagpur, India</p>
+												<h4>FLASH CHAT</h4>
+												<p class="img-cap">WhatsApp clone made using Flutter</p>
 												<!-- <a id="goto_box_4" href="#"><i class="zmdi zmdi-eye"></i></a>
 												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
 										</li>
 										
-										<li class="item mdl-card mdl-shadow--2dp pa-0 design">
+										
+										<li class="item mdl-card mdl-shadow--2dp pa-0 projects">
 											<div class="light-img-wrap mdl-card__title pa-0">
-												<img class="img-responsive" src="img/gallery5.jpg"  alt="Image description" />
-												<div class="light-img-overlay"></div>
-												<!-- <span class="img-cap">world seize day</span> -->
-											</div>
-											<span class="bottom-links mdl-card__actions">
-												<h4>SMART INDIA HACKATHON</h4>
-												<p class="img-cap">At the Grand Finale Event held at Nagpur, India</p>
-												<!-- <a id="goto_box_5" href="#"><i class="zmdi zmdi-eye"></i></a>
-												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
-											</span>
-										</li>
-										<li class="item mdl-card mdl-shadow--2dp pa-0 branding">
-											<div class="light-img-wrap mdl-card__title pa-0">
-												<img class="img-responsive" src="img/gallery6.jpg"  alt="Image description" />
+												<img class="img-responsive" src="img/isi.png"  alt="Image description" />
 												<div class="light-img-overlay"></div>
 												<!-- <span class="img-cap">green bugs</span> -->
 											</div>
 											<span class="bottom-links mdl-card__actions">
-												<h4>SMART INDIA HACKATHON</h4>
-												<p class="img-cap">At the Grand Finale Event held at Nagpur, India</p>
+												<h4>DISPLAY NGS DATA IN HBASE</h4>
+												<p class="img-cap">Made using Flask, Apache Thrift and HBase</p>
 												<!-- <a id="goto_box_6" href="#"><i class="zmdi zmdi-eye"></i></a>
 												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
