--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 											</div>	
 											<span class="bottom-links mdl-card__actions">
 												<h4>CROWDSAFE</h4>
-												<p class="img-cap">Covid Awareness System</p>
+												<p class="img-cap">Covid Awareness System usign Angular, Node JS and ML models</p>
 												<!-- <a id="goto_box_1" href="#"><i class="zmdi zmdi-eye"></i></a> -->
 												<!-- <a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
@@ -525,8 +525,6 @@
 												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
 										</li>
-										
-										
 										<li class="item mdl-card mdl-shadow--2dp pa-0 projects">
 											<div class="light-img-wrap mdl-card__title pa-0">
 												<img class="img-responsive" src="img/isi.png"  alt="Image description" />
@@ -534,7 +532,7 @@
 												<!-- <span class="img-cap">green bugs</span> -->
 											</div>
 											<span class="bottom-links mdl-card__actions">
-												<h4>DISPLAY NGS DATA IN HBASE</h4>
+												<h4>WEB UI FOR NGS DATA IN HBASE</h4>
 												<p class="img-cap">Made using Flask, Apache Thrift and HBase</p>
 												<!-- <a id="goto_box_6" href="#"><i class="zmdi zmdi-eye"></i></a>
 												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
