new image added

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 										</li>
 										<li  class="item mdl-card mdl-shadow--2dp pa-0 hackathon projects">
 											<div class="light-img-wrap mdl-card__title pa-0">
-												<img class="img-responsive" src="img/CrowdSafe.jpeg"  alt="Image description" />
+												<img class="img-responsive" src="img/CrowdSafe2.jpeg"  alt="Image description" />
 												<div class="light-img-overlay"></div>
 												<!-- <span class="img-cap">CrowdSafe</span> -->
 											</div>	
@@ -520,7 +520,7 @@
 											</div>
 											<span class="bottom-links mdl-card__actions">
 												<h4>FLASH CHAT</h4>
-												<p class="img-cap">WhatsApp clone made using Flutter</p>
+												<p class="img-cap">Mobile Chat Application made using Flutter</p>
 												<!-- <a id="goto_box_4" href="#"><i class="zmdi zmdi-eye"></i></a>
 												<a href="project-detail.html"><i class="zmdi zmdi-format-subject"></i></a> -->
 											</span>
