--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 		<!--CSS-->
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/change.css" />
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-W52FKLSJW7"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-W52FKLSJW7');
+		</script>
 	</head>
 	
 	<body id="body" data-ng-app="contactApp">
