--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<meta name="keywords" content="material design, resume, responsive template, cv, multipurpose, portfolio, html5 template, themeforest.net, bootstrap, html5, creative, landing page, sass, clean, design, modern, angular js," />
 		<meta name="author" content="hencework"/>
 		
-		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="img/icon-removebg-preview.png">
+		<link rel="icon" href="img/icon-removebg-preview.png" type="image/x-icon">
 		<!--CSS-->
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/change.css" />
@@ -46,7 +46,9 @@
 				<header class="mdl-layout__header">
 					<div class="mdl-layout__header-row mdl-scroll-spy-1">
 						<!-- Title -->
+						<!-- <img class="title-img" src="img/icon-removebg-preview.png"  alt="Image description" /> -->
 						<a href="index.html"><span class="mdl-layout-title">Aishik</span></a>
+						
 						<div class="mdl-layout-spacer"></div>
 						<ul class="nav mdl-navigation mdl-layout--large-screen-only">
 							<li><a class="mdl-navigation__link" data-scroll href="#body">about</a></li>
